--- a/src/index.css
+++ b/src/index.css
@@ -296,7 +296,16 @@ div.posterhide {
   text-align: center;
 }
 
+tbody tr:nth-child(even) {
+ background: rgba(252, 247, 236, 0.5);
+}
+tbody tr > td {
+   padding: 17px 0;
+ }
 
+ .item-type-padding{
+   padding:10px 0
+ }
 
 
 
@@ -316,6 +325,10 @@ div.posterhide {
   .text-align{
     text-align: left;
   }
+  .item-type-padding{
+    padding:30px 0
+  }
+ 
 }
 
 @media only screen and (min-width: 820px) {
