--- a/src/index.css
+++ b/src/index.css
@@ -262,6 +262,15 @@ div.posterhide {
 }
 
 
+.dashboard-option::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.dashboard-option {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 
 
 
@@ -307,7 +316,21 @@ tbody tr > td {
    padding:10px 0
  }
 
+ .activity-table:nth-child(even){
+  background: rgba(252, 247, 236, 0.5);
+ }
+ .activity-shadow{
+  box-shadow: 0px 1px 15px 2px rgba(0, 0, 0, 0.15);
+ }
 
+
+ .padding-size{
+    padding:0.25rem 0.5rem ;
+ }
+
+ .collection-border{
+   border: 1px solid #cdcdcd;
+ }
 
 @media only screen and (min-width: 640px) {
 
@@ -328,6 +351,15 @@ tbody tr > td {
   .item-type-padding{
     padding:30px 0
   }
+  .padding-size{
+    padding: 0.5rem ;
+ }
+
+  .collection-border{
+  border: 1px solid transparent;
+}
+
+
  
 }
 
